--- a/37_AutoML.ipynb
+++ b/37_AutoML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIo6hjKFJVRh76PJbShNfu",
+      "authorship_tag": "ABX9TyO9zJRLBE2WY/AiIUrTbEYv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -733,10 +733,23 @@
         "print(test.shape)"
       ],
       "metadata": {
-        "id": "5NaFEji719LY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5NaFEji719LY",
+        "outputId": "c6db098a-be6b-44ca-dac1-eac2fec3fe0d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(455, 14)\n",
+            "(51, 14)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -754,6 +767,212 @@
       ],
       "metadata": {
         "id": "x9K_OfKY2AKI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importando os pacotes necessários\n",
+        "from pycaret.regression import *"
+      ],
+      "metadata": {
+        "id": "i5AF8_f22drw"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# configurando o ambiente\n",
+        "reg = setup(data = train, target = 'MEDV', session_id=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 676
+        },
+        "id": "Ek_voJQ32ff9",
+        "outputId": "15063d56-a879-42b4-9096-660d30aea153"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7b8c1b6c72e0>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "#T_e9177_row9_col1 {\n",
+              "  background-color: lightgreen;\n",
+              "}\n",
+              "</style>\n",
+              "<table id=\"T_e9177\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th id=\"T_e9177_level0_col0\" class=\"col_heading level0 col0\" >Description</th>\n",
+              "      <th id=\"T_e9177_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_e9177_row0_col0\" class=\"data row0 col0\" >Session id</td>\n",
+              "      <td id=\"T_e9177_row0_col1\" class=\"data row0 col1\" >1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_e9177_row1_col0\" class=\"data row1 col0\" >Target</td>\n",
+              "      <td id=\"T_e9177_row1_col1\" class=\"data row1 col1\" >MEDV</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_e9177_row2_col0\" class=\"data row2 col0\" >Target type</td>\n",
+              "      <td id=\"T_e9177_row2_col1\" class=\"data row2 col1\" >Regression</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+              "      <td id=\"T_e9177_row3_col0\" class=\"data row3 col0\" >Original data shape</td>\n",
+              "      <td id=\"T_e9177_row3_col1\" class=\"data row3 col1\" >(455, 14)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+              "      <td id=\"T_e9177_row4_col0\" class=\"data row4 col0\" >Transformed data shape</td>\n",
+              "      <td id=\"T_e9177_row4_col1\" class=\"data row4 col1\" >(455, 14)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+              "      <td id=\"T_e9177_row5_col0\" class=\"data row5 col0\" >Transformed train set shape</td>\n",
+              "      <td id=\"T_e9177_row5_col1\" class=\"data row5 col1\" >(318, 14)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+              "      <td id=\"T_e9177_row6_col0\" class=\"data row6 col0\" >Transformed test set shape</td>\n",
+              "      <td id=\"T_e9177_row6_col1\" class=\"data row6 col1\" >(137, 14)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+              "      <td id=\"T_e9177_row7_col0\" class=\"data row7 col0\" >Numeric features</td>\n",
+              "      <td id=\"T_e9177_row7_col1\" class=\"data row7 col1\" >13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+              "      <td id=\"T_e9177_row8_col0\" class=\"data row8 col0\" >Rows with missing values</td>\n",
+              "      <td id=\"T_e9177_row8_col1\" class=\"data row8 col1\" >21.8%</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+              "      <td id=\"T_e9177_row9_col0\" class=\"data row9 col0\" >Preprocess</td>\n",
+              "      <td id=\"T_e9177_row9_col1\" class=\"data row9 col1\" >True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+              "      <td id=\"T_e9177_row10_col0\" class=\"data row10 col0\" >Imputation type</td>\n",
+              "      <td id=\"T_e9177_row10_col1\" class=\"data row10 col1\" >simple</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+              "      <td id=\"T_e9177_row11_col0\" class=\"data row11 col0\" >Numeric imputation</td>\n",
+              "      <td id=\"T_e9177_row11_col1\" class=\"data row11 col1\" >mean</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+              "      <td id=\"T_e9177_row12_col0\" class=\"data row12 col0\" >Categorical imputation</td>\n",
+              "      <td id=\"T_e9177_row12_col1\" class=\"data row12 col1\" >mode</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
+              "      <td id=\"T_e9177_row13_col0\" class=\"data row13 col0\" >Fold Generator</td>\n",
+              "      <td id=\"T_e9177_row13_col1\" class=\"data row13 col1\" >KFold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row14\" class=\"row_heading level0 row14\" >14</th>\n",
+              "      <td id=\"T_e9177_row14_col0\" class=\"data row14 col0\" >Fold Number</td>\n",
+              "      <td id=\"T_e9177_row14_col1\" class=\"data row14 col1\" >10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row15\" class=\"row_heading level0 row15\" >15</th>\n",
+              "      <td id=\"T_e9177_row15_col0\" class=\"data row15 col0\" >CPU Jobs</td>\n",
+              "      <td id=\"T_e9177_row15_col1\" class=\"data row15 col1\" >-1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row16\" class=\"row_heading level0 row16\" >16</th>\n",
+              "      <td id=\"T_e9177_row16_col0\" class=\"data row16 col0\" >Use GPU</td>\n",
+              "      <td id=\"T_e9177_row16_col1\" class=\"data row16 col1\" >False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row17\" class=\"row_heading level0 row17\" >17</th>\n",
+              "      <td id=\"T_e9177_row17_col0\" class=\"data row17 col0\" >Log Experiment</td>\n",
+              "      <td id=\"T_e9177_row17_col1\" class=\"data row17 col1\" >False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row18\" class=\"row_heading level0 row18\" >18</th>\n",
+              "      <td id=\"T_e9177_row18_col0\" class=\"data row18 col0\" >Experiment Name</td>\n",
+              "      <td id=\"T_e9177_row18_col1\" class=\"data row18 col1\" >reg-default-name</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_e9177_level0_row19\" class=\"row_heading level0 row19\" >19</th>\n",
+              "      <td id=\"T_e9177_row19_col0\" class=\"data row19 col0\" >USI</td>\n",
+              "      <td id=\"T_e9177_row19_col1\" class=\"data row19 col1\" >dfe3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Uma vez executado corretamente, o setup imprime um grid com várias informações importantes. A maioria dessas informações são sobre o pipeline de pré-processamento que é construído a partir dessa função.\n",
+        "\n",
+        "A maioria dessas features estão fora do escopo e propósito dessa aula, mas algumas coisas importantes a serem notadas nesse momento:\n",
+        "\n",
+        "Para garantir melhor reprodutibilidade, podemos passar o parâmetro `session_id`, como fizemos. Dessa forma, definimos um valor para o seeding, garantindo que o processamento das linhas será sempre feito da mesma forma. O número da session_id não é importante, o importante é tê-lo.\n",
+        "\n",
+        "Abaixo, podemos entender melhor algumas linahs do Grid que recebemos do setup:\n",
+        "\n",
+        "* Original Data : Mostra o tamanho do conjunto de dados original, assim como o passamos.\n",
+        "\n",
+        "* Missing Values : Mostrará como True quando houverem dados ausentes no conjunto recebido.\n",
+        "\n",
+        "* Numeric Features : Número de features inferidas como numéricos.\n",
+        "\n",
+        "* Categorical Features : Número de features inferidas como categóricas.\n",
+        "\n",
+        "* Transformed Train Set : Mostra o shape do conjunto de treino. Repare que o conjunto original é (455,14), mas foi transformado em (328,23) para o conjunto de treino. O número de features cresceu de 14 para 23 por causa do encoding feito nas variáveis categóricas.\n",
+        "\n",
+        "* Transformed Test Set : Mostra o shape do conjunto de teste/validação. O split é feito na proporção padrão 70/30, que pode ser mudada usando o parâmetro `train_size` no setup.\n",
+        "\n",
+        "Repare que algumas tarefas essenciais para a modelagem são feitas automaticamente, como lidar com valores ausentes, encoding categórico, etc. A maioria dos parâmetros e possibilidades fogem do escopo dessa aula, mas podem ser personalizados caso você queira ter mais controle sobre essas etapas."
+      ],
+      "metadata": {
+        "id": "Vc1hTCs02mef"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Comparando Modelos\n",
+        "\n",
+        "Comparar todos os modelos para avaliar a performance é um ponto inicial recomendado pelos desenvolvedores do PyCaret, a não ser que você saiba exatamente qual o modelo específico que você quer utilizar, o que é raramente o caso.\n",
+        "\n",
+        "Essa função treina todos os modelos na biblioteca do PyCaret e os avalia usando validação cruzada. Para a avaliação, a função imprime uma tabela que mostra a média do MAE, MSE, RMSE, R2, RMSLE e MAPE através dos folds (10 por padrão) de todos os modelos disponíveis na biblioteca.\n",
+        "\n",
+        "* MAE - Mean Absolute Error mostra a média de erro em valores absolutos.\n",
+        "* MSE - Mean Squared Error, Erro Quadrático Médio\n",
+        "* RMSE - Root Mean Squared Error, Raiz do Erro Quadrático Médio\n",
+        "* R2 - Coefficient of Determination R2 Score\n",
+        "* RMSLE - Root Mean Squared Log Error\n",
+        "* MAPE - Mean Absolute Percentage Error mostra a média do erro absoluto em valores percentuais."
+      ],
+      "metadata": {
+        "id": "PndB3OHJ2o8E"
       }
     }
   ]
