--- a/38_Regressão_com_PyCaret.ipynb
+++ b/38_Regressão_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNy8NKA/Qj3QLDr7kHFFCd5",
+      "authorship_tag": "ABX9TyO25pPoqkDOzbffo/eKxVKx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4868,7 +4868,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Salvando o Modelo\n",
+        "## **Salvando o Modelo**\n",
         "\n",
         "Agora que terminamos nosso trabalho com o modelo, é hora de se preocupar em como mantê-lo utilizável e pronto para fazer novas previsões em novos dados.\n",
         "\n",
@@ -4949,7 +4949,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Carregando um Modelo\n",
+        "## **Carregando um Modelo**\n",
         "\n",
         "Se salvar um modelo com PyCaret é simples, carregar o mesmo não poderia ser diferente.\n",
         "\n",
